system/linux/Docker/kubernetes/install/playgrounds/www.katacoda.com/ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-lb
  labels:
    app: nginx-ingress
spec:
  externalIPs:
  - 172.17.0.30
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: nginx-ingress
